KubernetesProject/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
    app: webapp

spec:
  containers:
  - name: ubuntu
    image: hello-world
