KubernetesProject/APIGatewayDeployment.yml
kind: Service
apiVersion: v1
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway-service
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  selector:
      matchLabels:
        app: api-gateway-service
  replicas: 2
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
        - name: api-gateway-deployment
          image: api-gateway:latest
          imagePullPolicy: Never
	  readinessProbe:
	  httpGet:
		path: /
		port: 8080
          ports:
            - containerPort: 8080
          #resources:
            #requests:
              #cpu: 10m
