KubernetesProject/MailServiceDeployment.yml
kind: Service
apiVersion: v1
metadata:
  name: mail-service
spec:
  selector:
    app: mail-service
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service-deployment
spec:
  selector:
      matchLabels:
        app: mail-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
        - name: mail-service-deployment
          image: mail-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          #resources:
            #requests:
              #cpu: 10m
