KubernetesProject/OrderingServiceDeployment.yml
kind: Service
apiVersion: v1
metadata:
  name: ordering-service
spec:
  selector:
    app: ordering-service
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordering-service-deployment
spec:
  selector:
      matchLabels:
        app: ordering-service
  replicas: 1
  template:
    metadata:
      labels:
        app: ordering-service
    spec:
      containers:
        - name: ordering-service-deployment
          image: ordering-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          #resources:
            #requests:
              #cpu: 10m
