KubernetesProject/authDB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-mysql
spec:
  selector:
    matchLabels:
      app: oauth-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: oauth-mysql
    spec:
      containers:
      - image: mysql:5
        name: oauth-mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim


---
kind: Service
apiVersion: v1
metadata:
  name: oauth-database-service
spec:
  selector:
    app: oauth-mysql
  ports:
  - port: 3306
  type: ClusterIP
