KubernetesProject/serviceLB.yml
kind: Service
apiVersion: v1
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 8080
    targetPort: 30080
  type: LoadBalancer
