KubernetesProject/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector: 
    app: webapp

  ports:
    - name: http
      protocol: TCP
      port: 8080
      nodePort: 30080

 
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector: 
    app: api-gateway

  ports:
    - name: http
      protocol: TCP
      port: 8081
      nodePort: 30081

 
  type: NodePort
